<resources>
    <string name="app_name">Ibox</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_schedule">Schedule</string>
    <string name="title_profile">Profile</string>
    <string name="options">Options</string>
    <string name="homework">Homework</string>
    <string name="fees">Fees</string>
    <string name="result">Result</string>
    <string name="track_bus">Track bus</string>
    <string name="syllabus">Syllabus</string>
    <string name="gallery">Gallery</string>
    <string name="faq">FAQ</string>
    <string name="articles">Articles for you</string>
    <string name="view_all">View all</string>
    <string name="dot">|</string>
    <string name="watch_program">What\'s live</string>
    <string name="attendance">Attendance</string>
    <string name="st_class">Class </string>
    <string name="st_class1">Class :</string>
    <string name="student_name">Amit Singh</string>
    <string name="switch_teacher">Go to teacher mode</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="parent_contacts">Parents contact</string>
    <string name="ask_question">Ask question</string>
    <string name="suggestion">Suggestions</string>
    <string name="logout">Logout</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="under_development">This page is under development</string>
    <string name="empty_error">cannot be empty</string>
    <string name="login_error">Username or Password invalid</string>
    <string name="error_occurred">Oops! an error occurred</string>
    <string name="teacher_name">Mr. John</string>
    <string name="navigate_to_teacher">Go to teacher mode</string>
    <string name="title_teacher">Teacher</string>
    <string name="chat">Chat</string>
    <string name="students">Students</string>
    <string name="leave">Leave</string>
    <string name="upload_hub">Upload hub</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="add_image">Add image</string>
    <string name="upload_homework_upload">Upload homework</string>
    <string name="submission_date">Submission</string>
    <string name="div">Div :</string>
    <string name="save"><![CDATA[Save]]></string>
    <string name="navigate_to_parents">Go to parents</string>
    <string name="double_back">Press back again to Exit</string>
    <string name="search">Search</string>
    <string name="period">Period</string>
    <string name="submission_date_needed">last date needed</string>
    <string name="photo_needed">Photo needed</string>
    <string name="failed">Uploading failed</string>
    <string name="daily_homework">Daily</string>
    <string name="assignment">Assignment</string>
    <string name="hw_type">Type</string>
    <string name="teacher">Teacher</string>
    <string name="subject">Subject</string>
    <string name="download">Download</string>
    <string name="note">note</string>
    <string name="share">Share</string>
    <string name="permission_needed">Permission(needed)</string>
    <string name="uploded">Uploaded successfully</string>
    <string name="upload_fail">Uploading failed</string>
    <string name="publish_date">Publish</string>
    <string name="test_name">Test name</string>
    <string name="school_name">School name</string>
    <string name="name">Name :</string>
    <string name="roll">Roll :</string>
    <string name="total">Total</string>
    <string name="obtained">obtain</string>
    <string name="grade">Grade</string>
    <string name="grand_total">Grand Total :</string>
    <string name="notes">This is an auto generated marksheet no signature needed.</string>
    <string name="no_student">No student in class</string>
    <string name="attendance_uploaded">Atendance uploaded successfully</string>
    <string name="no_homework">No homeworks till now</string>
    <string name="image_loading_failed">Failed to load image</string>
    <string name="no_result">No result till now</string>
    <string name="mon">MON</string>
    <string name="sun">SUN</string>
    <string name="tue">TUE</string>
    <string name="wed">WED</string>
    <string name="thu">THU</string>
    <string name="fri">FRI</string>
    <string name="sat">SAT</string>
    <string name="absent">Absent</string>
    <string name="present">Present</string>
    <string name="weekend">Weekend</string>
    <string name="holiday">Holiday</string>
    <string name="color_code">Color code</string>
    <string name="title_notification">Notification</string>
    <string name="no_attendence">No record found</string>
    <string name="academics">Academics</string>
    <string name="rectify">Rectify</string>
    <string name="seek_leave">Seek leave</string>
    <string name="others">Others</string>
    <string name="submit">Submit</string>
    <string name="conform">Confirm</string>
    <string name="downloaded">Downloaded</string>
    <string name="downloading">Downloading...</string>
    <string name="download_failed">Downloading failed</string>
    <string name="no_syllabus">No syllabus till now</string>
    <string name="taken">Taken</string>
    <string name="pending">Pending</string>
    <string name="leave_summary">Leave summary</string>
    <string name="due_fees">Due fees</string>
    <string name="add_file">Attachment</string>
    <string name="exam_name">Exam Name</string>
    <string name="no_syllabus_attached">Syllabus not attached yet</string>
    <string name="no_notes">No notes till now</string>
    <string name="st_section">Section</string>
    <string name="address">Address</string>
    <string name="father_name">Father name</string>
    <string name="mother_name">Mother name</string>
    <string name="mobile_no">Mobile no</string>
    <string name="change_mobile_no">Mobile no</string>
    <string name="continue_btn">Continue</string>

    <string name="change_contact_no">Change contact no</string>
    <string name="faq_question">Have question?</string>
    <string name="faq_question_tips">Tips : \n 1.Be specific , ask question about the service not about other. \n 2. Ask for information which is not captured in the description.</string>
    <string name="question">Q.</string>
    <string name="answer">A.</string>
    <string name="apply_leave">Apply leave</string>
    <string name="select_date">Select date</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="ibox">IBOX Community</string>
    <string name="pay">Pay now</string>
    <string name="no_amount">No amount to pay</string>
    <string name="no_fees">No record found</string>
    <string name="update_success">Payment updated successfully</string>
    <string name="update_failed">Payment updating failed</string>
    <string name="discount">Discount</string>
    <string name="search_for_a_book">Search a book..</string>
    <string name="library">Library</string>
    <string name="no_photos">No photos to display</string>
    <string name="starting_from">Starting From</string>
    <string name="joining_on">Joining On</string>
    <string name="no_books">No books to show</string>
    <string name="request_sent">Issue request sent</string>
    <string name="notification">Notification</string>
    <string name="no_notification">No notifications till now!</string>
    <string name="no_student_here">You have no students studying here.</string>
    <string name="no_chats">You have no chats till now</string>
    <string name="not_sent">Message not sent</string>
    <string name="sent">Message sent</string>
    <string name="no_teacher">No teachers to show</string>
    <string name="retry">Retry</string>
    <string name="paid">Paid</string>
    <string name="invoice">INVOICE</string>
    <string name="no_articles">No articles</string>
    <string-array name="academics_items">
        <item>Home Work</item>
        <item>Assignment</item>
        <item>Syllabus</item>
        <item>Notes</item>
    </string-array>
</resources>
