<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".ui.student.schedule.RoutineFragment">

    <!-- days header -->
    <LinearLayout
        android:id="@+id/calendar_header"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginStart="@dimen/margin10"
        android:layout_marginEnd="@dimen/margin10"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/student_routine_sunday"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:textColor="#222222"
            android:text="@string/sun"/>

        <TextView
            android:id="@+id/student_routine_monday"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:textColor="#222222"
            android:text="@string/mon"/>
        <TextView
            android:id="@+id/student_routine_tuesday"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:textColor="#222222"
            android:text="@string/tue"/>
        <TextView
            android:id="@+id/student_routine_wednesday"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:textColor="#222222"
            android:text="@string/wed"/>
        <TextView
            android:id="@+id/student_routine_thursday"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:textColor="#222222"
            android:text="@string/thu"/>
        <TextView
            android:id="@+id/student_routine_friday"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:textColor="#222222"
            android:text="@string/fri"/>
        <TextView
            android:id="@+id/student_routine_saturday"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:textColor="#222222"
            android:text="@string/sat"/>
    </LinearLayout>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/routine_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/margin5"
        android:layout_marginStart="@dimen/margin10"
        android:layout_marginEnd="@dimen/margin10"
        tools:itemCount="7"
        tools:listitem="@layout/student_custom_routine_card"/>

</LinearLayout>