<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/white">
    <include
        layout="@layout/setup_teacher_toolbar"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.viewpager.widget.ViewPager
                android:id="@+id/viewPagerNoticeTeacher"
                android:layout_width="match_parent"
                android:layout_marginTop="@dimen/margin10"
                android:layout_marginStart="@dimen/margin10"
                android:layout_marginEnd="@dimen/margin10"
                android:layout_height="200dp"/>

            <com.google.android.material.tabs.TabLayout
                app:tabGravity="center"
                android:id="@+id/indicator"
                app:tabBackground="@drawable/view_pager_tab_indicator"
                app:tabIndicatorHeight="0dp"
                app:tabIndicatorGravity="center"
                android:layout_width="match_parent"
                android:layout_height="15dp">

            </com.google.android.material.tabs.TabLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/margin10"
                android:layout_marginEnd="@dimen/margin10"
                android:layout_marginTop="@dimen/margin20"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/upload_hub"
                    android:textColor="@color/black"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    />

                <LinearLayout
                    android:layout_marginTop="@dimen/margin10"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="3">

                    <LinearLayout
                        android:id="@+id/upload_homework_click"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:gravity="center"
                        android:layout_weight="1">

                        <ImageView
                            android:layout_width="@dimen/dashboard_icon_size"
                            android:layout_height="@dimen/dashboard_icon_size"
                            android:background="@drawable/homework"/>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/academics"
                            android:textColor="@color/black"
                            android:gravity="center"
                            android:textSize="@dimen/text_size16"
                            android:layout_marginTop="@dimen/margin5"/>

                    </LinearLayout>


                    <LinearLayout
                        android:id="@+id/attandance_click"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:gravity="center"
                        android:elevation="@dimen/elevation5"
                        android:layout_weight="1">

                        <ImageView
                            android:layout_width="@dimen/dashboard_icon_size"
                            android:layout_height="@dimen/dashboard_icon_size"
                            android:background="@drawable/fees"/>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/attendance"
                            android:gravity="center"
                            android:textColor="@color/black"
                            android:textSize="@dimen/text_size16"
                            android:layout_marginTop="@dimen/margin5"/>

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/studentsClick"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="@dimen/dashboard_icon_size"
                            android:layout_height="@dimen/dashboard_icon_size"
                            android:background="@drawable/test" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/margin5"
                            android:gravity="center"
                            android:text="@string/students"
                            android:textColor="@color/black"
                            android:textSize="@dimen/text_size16" />

                    </LinearLayout>


                </LinearLayout>
                <LinearLayout
                    android:layout_marginTop="@dimen/margin10"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="3">

                    <LinearLayout
                        android:id="@+id/leave_layout"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:gravity="center"
                        android:layout_weight="1">

                        <ImageView
                            android:layout_width="@dimen/dashboard_icon_size"
                            android:layout_height="@dimen/dashboard_icon_size"
                            android:background="@drawable/import_contacts_black"/>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/leave"
                            android:gravity="center"
                            android:textColor="@color/black"
                            android:textSize="@dimen/text_size16"
                            android:layout_marginTop="@dimen/margin5"/>

                    </LinearLayout>
                    <LinearLayout
                        android:id="@+id/galleryLayout"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:gravity="center"
                        android:layout_weight="1">

                        <ImageView
                            android:layout_width="@dimen/dashboard_icon_size"
                            android:layout_height="@dimen/dashboard_icon_size"
                            android:background="@drawable/gallery"/>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/gallery"
                            android:textColor="@color/black"
                            android:gravity="center"
                            android:textSize="@dimen/text_size16"
                            android:layout_marginTop="@dimen/margin5"/>

                    </LinearLayout>


                    <LinearLayout
                        android:id="@+id/chatLayoutClick"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:gravity="center"
                        android:layout_weight="1">

                        <ImageView
                            android:layout_width="@dimen/dashboard_icon_size"
                            android:layout_height="@dimen/dashboard_icon_size"
                            android:background="@drawable/forum_black"
                            android:backgroundTint="@color/icon_color_fees"/>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/chat"
                            android:textColor="@color/black"
                            android:gravity="center"
                            android:textSize="@dimen/text_size16"
                            android:layout_marginTop="@dimen/margin5"/>

                    </LinearLayout>
                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:layout_marginTop="@dimen/margin20">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/articles"
                        android:layout_weight="1"
                        android:textColor="@color/black"
                        android:textSize="20dp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/teacher_view_more"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/view_all"
                        android:textColor="@color/text_light"
                        android:textSize="16dp"
                        android:padding="@dimen/margin5"
                        android:background="#F4F0F0"/>

                </LinearLayout>
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/articlesForYouRecyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    tools:itemCount="2"
                    tools:listitem="@layout/blog_single_card"
                    android:layout_marginTop="@dimen/margin10" />
            </LinearLayout>
        </LinearLayout>

    </ScrollView>
</LinearLayout>