<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".ui.student.schedule.AttendanceFragment">
<!--    -->
<!--    <ScrollView-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="match_parent">-->

        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin10"
        android:layout_marginEnd="@dimen/margin10"
        android:orientation="vertical">

    <com.sumit.ibox.model.CalendarView
        xmlns:calendarNS="http://schemas.android.com/apk/res/com.sumit.ibox"
        android:id="@+id/calendar_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        calendarNS:dateFormat="MMM yyyy"/>

<!--            <TextView-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:textSize="@dimen/text_size18"-->
<!--                android:textColor="@color/black"-->
<!--                android:gravity="start|center"-->
<!--                android:layout_marginTop="@dimen/margin10"-->
<!--                android:text="@string/color_code"/>-->
            <ProgressBar
                android:id="@+id/progress_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"/>

            <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/margin20"
        android:layout_weight="2">

        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/margin20"
        android:layout_weight="2">
                <TextView
                    android:id="@+id/absent"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/image40"
                    android:textSize="@dimen/text_size16"
                    android:textColor="@color/white"
                    android:layout_weight="1"
                    android:background="@drawable/red_round_button"
                    android:gravity="center"
                    android:layout_marginEnd="10dp"
                    android:text="@string/absent"/>

                <TextView
                    android:id="@+id/present"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/image40"
                    android:textSize="@dimen/text_size16"
                    android:layout_weight="1"
                    android:textColor="@color/white"
                    android:background="@drawable/green_round_button"
                    android:gravity="center"
                    android:backgroundTint="#4CAF50"
                    android:layout_marginStart="@dimen/margin10"
                    android:text="@string/present"/>
    </LinearLayout>
    </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2"
                android:layout_marginTop="@dimen/margin10">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/image40"
                    android:textSize="@dimen/text_size16"
                    android:textColor="@color/white"
                    android:layout_weight="1"
                    android:background="@drawable/red_round_button"
                    android:gravity="center"
                    android:layout_marginEnd="10dp"
                    android:backgroundTint="@color/yellow"
                    android:text="@string/weekend"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/image40"
                    android:textSize="@dimen/text_size16"
                    android:layout_weight="1"
                    android:textColor="@color/white"
                    android:background="@drawable/green_round_button"
                    android:gravity="center"
                    android:backgroundTint="#F62167"
                    android:layout_marginStart="@dimen/margin10"
                    android:text="@string/holiday"/>
            </LinearLayout>
    </LinearLayout>
<!--    </ScrollView>-->
</RelativeLayout>